<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nguoidung"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/theloai"
        android:orderInCategory="100"
        android:title="@string/action_theloai"
        app:showAsAction="never" />

    <item
    android:id="@+id/themsach"
    android:orderInCategory="100"
    android:title="@string/action_themsach"
    app:showAsAction="never" />

    <item
        android:id="@+id/hoadon"
        android:orderInCategory="100"
        android:title="@string/action_hoadon"
        app:showAsAction="never" />
</menu>
