<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:layout_width="92dp"
        android:layout_height="80dp"
        android:src="@drawable/icon" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edttk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/ghinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Ghi Nhớ Đăng Nhập"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:layout_gravity="center"
                android:id="@+id/btid"
                android:background="@color/colorPrimary"
                android:layout_width="170dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:textColor="#FFF"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:layout_gravity="center"
                android:id="@+id/btdk"
                android:background="@color/colorPrimary"
                android:layout_width="170dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:textColor="#FFF"
                android:onClick="dangky"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>

</LinearLayout>